# wether

./: Cargo.toml  LICENSE  README.md  goals
src/: main.rs  weather.rs
